css/custom.css
/* ... */
#topbanner,
#rightTop {
    display: inline-block;
    width: 30%;
    vertical-align: middle;
}

#rightTop {
    text-align: right;
    width: 69%;
    padding: 4px 0px 0px 0px;
}

#rightTop > div {
    display: inline-block;
    vertical-align: middle;
}

#topbanner a {
    display: inline-block;
    padding: 27px 0 25px 14px;
}

a.homeButton {
    background-color: #155591;
    width: 59px;
    display: inline-block;
    text-align: center;
    border-right: solid 1px #0c355b;
    border-left: solid 1px #0c355b;
}

a.homeButton i {
    line-height: 51px;
    color: #fefeff;
    font-size: 24px;
}

#topMenu > div {
    display: inline-block;
    vertical-align: top;
}

#quickNavBar {
    width: 100%;
    min-height: 38px;
}

#main #pMenuToplevell0 a {
    padding: 0px 22px !important;
    line-height: 51px;
    color: #ffffff !important;
    font-size: 20px !important;
    border: medium none !important;
    text-decoration: none !important;
    border-right: solid 1px #0c355b !important;
    text-transform: uppercase;
    display: inline-block;
}

#main #pMenuToplevell0 a:hover {
    background-color: #0c4880;
}

#main #SearchBoxbdy {
    position: relative;
    margin-right: 90px;
    width: 370px;
}

#main #SearchBoxbdy input[type="button"] {
    position: absolute;
    top: 0px;
    right: -80px;
    width: 83px;
    border: medium none;
    border-radius: 4px !important;
    height: 44px;
    min-height: 44px;
    padding: 0px;
    font-size: 19px;
    padding-left: 21px;
    color: #FFFFFF;
    background-image: url('/images/editor/images/search.png');
    background-repeat: no-repeat;
    background-position: 0 0;
    text-align: center;
    margin: 0px !important;
    cursor: pointer;
}

#main #SearchBoxbdy input.textbox {
    margin: 0 !important;
    padding-left: 6px !important;
    width: 100% !important;
    line-height: 42px;
    border: solid 1px #707170 !important;
    border-radius: 4px 0 0 4px !important;
    background-color: #FFFFFF !important;
    color: #a09f9f !important;
    font-size: 16px !important;
    text-align: left !important;
}

.miniBasketBdy {
    min-width: 185px;
    position: relative;
    margin-right: 7px;
}

.miniBasketBdy img {
    float:left;
}

.miniBasketBdy a {
    background: #999999;
    background: -moz-linear-gradient(top, #999999 0%, #666766 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#999999), color-stop(100%,#666766));
    background: -webkit-linear-gradient(top, #999999 0%,#666766 100%);
    background: -o-linear-gradient(top, #999999 0%,#666766 100%);
    background: -ms-linear-gradient(top, #999999 0%,#666766 100%);
    background: linear-gradient(to bottom, #999999 0%,#666766 100%);
    border-radius: 4px;
    padding: 9px 9px 9px 7px;
    text-align: left;
    position: relative;
    display: block;
    text-decoration: none;
}

.miniBasketBdy a .miniBasketItemCount {
    background: #21d83a;
    background: -moz-linear-gradient(top, #21d83a 0%, #209f32 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#21d83a), color-stop(100%,#209f32));
    background: -webkit-linear-gradient(top, #21d83a 0%,#209f32 100%);
    background: -o-linear-gradient(top, #21d83a 0%,#209f32 100%);
    background: -ms-linear-gradient(top, #21d83a 0%,#209f32 100%);
    background: linear-gradient(to bottom, #21d83a 0%,#209f32 100%);
    color: #FFFFFF;
    font-size: 16px;
    font-weight: bold;
    width: 35px;
    text-align: center;
    text-decoration: none;
    position: absolute;
    left: 24px;
    top: -12px;
    border-radius: 15px !important;
    -ms-border-radius: 15px !important;
    line-height: 35px;
}

.miniBasketBdy a .miniBasketText {
    color: #e0dfdf;
    font-size: 15px;
    margin: 0;
    font-weight: bold;
    text-decoration: none;
    padding-left: 30px;
    line-height: 12px;
    float: left;
 }

.miniBasketBdy a .miniBasketHeading {
    display: block;
    font-size: 12px;
    font-weight: normal;
}

#leftPane,
.contentPane {
    display: inline-block;
    vertical-align: top;
    width: 24.8%;
    margin: 0 !important;
    padding: 0 !important;
}

.contentPane {
    width: 74.8%;
    background: #ffffff;
    position: relative;
    left: -4px;
}

.fullcontentBdy .contentPane {
    width: 100%;
}

.contentOuterBdy {
    text-align: left;
    width: 100%;
}

#pMenuSublevels #pMenuSublevelsh2 {
    background: #0f416f;
    color: #ffffff;
    line-height: 40px;
    margin: 0;
    text-transform: uppercase;
    text-align: left;
    padding: 0 0 0 10px;
    font-size: 18px;
    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.82);
    clear: both;
    font-weight: normal;
}

#pMenuSublevels #pMenuSublevelsbdy {
    border-left: 1px solid #d0cfcf;
    background: #fff;
}

#pMenuSublevels #pMenuSublevelsbdy ul li a {
    color: #666666;
    font-size: 16px;
    padding: 10px 0 10px 10px;
    border-bottom: 1px solid #d0cfcf;
    display: block;
    font-weight: normal;
    text-decoration: none;
}

#pMenuSublevels #pMenuSublevelsbdy ul li a:before {
    content: "\f105";
    padding: 0 5px 0 0;
    color: #148bce;
    font-family: FontAwesome;
}

#pMenuSublevels #pMenuSublevelsbdy ul li a.active {
    font-weight: bold;
    color: #000000;
}

#pMenuSublevels #pMenuSublevelsbdy ul li #pMenuSublevelsl2 li a {
    padding: 10px 0 10px 20px;
}

#pMenuSublevels #pMenuSublevelsbdy ul li #pMenuSublevelsl2 li #pMenuSublevelsl3 li a {
    padding: 10px 0 10px 30px;
}

#ucMenuNamebdy {
    background: #ffffff;
    padding: 0 15px 0px 10px;
    border: 1px solid #d0cfcf;
    border-bottom: medium none;
    border-top: medium none;
}

#ucMenuNamebdy h1 {
    margin: 0;
    text-align: left;
    line-height: 24px;
    padding: 8px 0 0;
    color: #333333;
    font-size: 24px;
    display: block;
    padding-bottom: 0.5rem;
}

#ucMenuCmsbdy {
    border: 1px solid #d0cfcf;
    border-top: medium none;
    padding: 0 15px 25px 10px;
    color: #666666;
    font-size: 16px;
}
/* ... */

